<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnidataAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="main_product_type">Choose a product type:</string>
    <string name="main_product">Choose a product:</string>
    <string name="main_location">Location of interest:</string>
    <string name="main_variables">Variable to display:</string>
    <string name="main_submit">SUBMIT</string>
    <string name="location_lat">LAT:</string>
    <string name="location_lon">LON:</string>
    <string name="main_time_start">Starting Time:</string>
    <string name="main_time_end">Ending Time:</string>
    <string name="location_current">Current Location</string>
    <string name="location_show">Fly to Coords</string>
    <string name="new_request">New Request</string>

    <string-array name="main_product_types">
        <item>Choose a product type</item>
        <item>NCEP Model Data</item>
    </string-array>
    <string-array name="products_ncep">
        <item>Choose an NCEP model product</item>
        <item>GFS CONUS 80km</item>
    </string-array>
    <string-array name="products_empty">
        <item>Please choose product type first</item>
    </string-array>
    <string-array name="variables_gfs_conus_80km">
        <item>Convective Available Potential Energy</item>
        <item>Convective Inhibition</item>
    </string-array>
    <string-array name="variables_empty">
        <item>Please choose a product first</item>
    </string-array>
    <string-array name="time_start_empty">
        <item>Please choose a product first</item>
    </string-array>
    <string-array name="time_end_empty">
        <item>Please choose a starting time first</item>
    </string-array>

    <string name="title_activity_display">DisplayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_unidata_super">UnidataSuperActivity</string>

</resources>
